Napravljen basic chat bot s osnovnim funkcijama